--- a/joystick/index.html
+++ b/joystick/index.html
@@ -15,9 +15,9 @@
     <div id="main">
     
       <div class="osc-joystick">
-        <div class="osc-joystick-button-container">
+        <!-- <div class="osc-joystick-button-container">
           <div class="osc-joystick-button" data-osc-address="/joystick/1/button/1" style="margin: 5em; margin-left: auto; margin-right: auto"></div>
-        </div>
+        </div> -->
         <div class="osc-joystick-handle-container">
           <div class="osc-joystick-handle" data-osc-address="/joystick/1/handle" data-osc-x="0.0" data-osc-y="0.0"></div>
         </div>
